server/compilers/goLiteJS/src/test/ml1/valid/struct1.go
// struct support
package main

type point struct {
        x, y, z int
}

var p point

func main() {
    p.x = 1
    p.y = 2
    p.z = 3
}
