server/compilers/goLiteJS/src/test/ml1/invalid/slice1.go
//slice literal
package main

var x []int = []int{1,2,3,4}
